# prep-source-repos

./: .gitignore  .gitreview  AUTHORS  CONTRIBUTING.rst  COPYRIGHT  ChangeLog  README  README.md  README.rst  devtestrc  example_networks.json  example_nodes.json  repo_refs.yaml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  contributing.rst  index.rst  installation.rst  usage.rst
prep_source_repos/: cmd.py
rack-testing/: .README.swp  README  devtestrc
