[metadata]
name = prep_source_repos
author = OpenStack Foundation
author-email = openstack-dev@lists.openstack.org
summary = Tool to manage a local checkout of a set of unlanded patches on a Gerrit repository
description-file = README.rst
license = Apache-2
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Environment :: OpenStack
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
keywords =
    gerrit
[files]
packages =
    prep_source_repos

[entry_points]
console_scripts =
    prep_source_repos = prep_source_repos.cmd:main
